[package]
name = "packrat"
version = "0.2.0"
description = "A simple terminal UI for updating your package.json dependencies"
repository = "https://github.com/Doesntmeananything/packrat"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.12", features = ["derive"] }
crossterm = { version = "0.23.2", features = ["serde"] }
futures = "0.3.21"
node-semver = "2.0.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tui = { version = "0.18.0", features = ["serde"] }
